--- a/react-full-base/package.json
+++ b/react-full-base/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.9",
+    "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0"
   }
