--- a/react-full-base/package.json
+++ b/react-full-base/package.json
@@ -5,15 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack"
+    "start": "webpack",
+    "production": "cross-env NODE_ENV=production webpack",
+    "watch": "webpack --watch",
+    "dev": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.18",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.2",
-    "webpack": "^3.11.0"
+    "uglifyjs-webpack-plugin": "^1.2.0",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
