--- a/react-full-base/package.json
+++ b/react-full-base/package.json
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "^0.1.18",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.0",
