--- a/react-full-base/package.json
+++ b/react-full-base/package.json
@@ -8,7 +8,9 @@
     "start": "webpack",
     "production": "cross-env NODE_ENV=production webpack",
     "watch": "webpack --watch",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open",
+    "stats": "webpack --profile --html > reports/stats.html",
+    "stats-production": "cross-env NODE_ENV=production webpack --profile --progress --display-reasons --json > stats.json"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.0",
     "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.10.0",
     "webpack-dev-server": "^2.11.1"
   }
 }
